20/02/2019:
	- Fixed rounding error in getViewWidth() / getViewHeight() which was causing
	  certain IIIF requests to be handled by CVT rather than JTL. See:
          https://github.com/ruven/iipsrv/issues/148#issuecomment-453125005
	- Adding missing default initialization for kdu_readmode variable.


15/02/2019:
	- Changed exit code after signal handling for clean shutdown when iipsrv used
	  with systemd.


15/01/2019:
	- Added "bitonal" to list of available qualities in the IIIF info.json file and
	  replaced use of pow with a faster bitwise shift.


09/01/2019:
	- Added ability to do contrast stretching and histogram equalization via extensions
	  to the CNT command (CNT=EQ and CNT=ST respectively). Also added new IIP command to
	  enable color space conversion to greyscale or binary (aka bi-level or bitonal) via
	  the COL command (COL=grey or COL=binary). Image histogram is calculated once when
	  needed and saved in the image cache.


21/12/2018:
	- Added fix for rounding error in CVT.cc to avoid garbled last lines in region
	  requests for very large images.


30/11/2018:
	- Added maxWidth and maxHeight IIIF API 2.1 directives to info.json.


13/11/2018:
	- Converted RawTile dataLength variable to unsigned to improve overflow
	  avoidance as per https://github.com/ruven/iipsrv/pull/156
	- Added Visual Studio version check to round() implementation in
	  windows/Time.cc as now supported in recent versions.


12/11/2018:
	- Refactored image procesing code. Transform functions are now encapsulated
	  within a struct to allow new processing engines to be more easily added.
	- Cleanup to Environment.h to remove redundant comparison as readmode is
	  declared unsigned and can never be less than 0.


05/11/2018:
	- Added codecOptions list to Session class for setting options for the encoders
	  or decoders. Added KDU_READMODE environment variable for setting the Kakadu
	  read-mode in KakaduImage.cc. Options are 0 (fast), 1 (fussy) or 2 (resilient).


23/07/2018: